Changes tagging system for questions

--- a/overview/questions.tex
+++ b/overview/questions.tex
@@ -1,5 +1,5 @@
 \question\label{q:sidechannels}
-% examgen: sidechannels:E
+% tags: sidechannels:E
 \begin{parts}
   \part[3] What is a side-channel attack?
   \begin{solution}
@@ -17,7 +17,7 @@
 
 
 \question[4]\label{q:sidechannels}
-% examgen: sidechannels:E
+% tags: sidechannels:E
 Give an example of a side-channel attack and motivate why it is a side channel.
 
 \begin{solution}
@@ -37,13 +37,13 @@ Give an example of a side-channel attack and motivate why it is a side channel.
 
 
 %\question\label{q:sidechannels}
-%% examgen: sidechannels:C
+%% tags: sidechannels:C
 %Does knowledge about the hardware give any advantage? As a designer, as an 
 %attacker?
 
 
 \question[2]\label{q:sidechannels}
-% examgen: sidechannels:E
+% tags: sidechannels:E
 Describe an attack scenario where a side-channel is of central interest.
 
 \begin{solution}
@@ -56,7 +56,7 @@ Describe an attack scenario where a side-channel is of central interest.
 
 
 \question[3]\label{q:sidechannels}
-% examgen: sidechannels:E
+% tags: sidechannels:E
 Give an example of a passive side-channel attack.
 
 \begin{solution}
@@ -69,7 +69,7 @@ Give an example of a passive side-channel attack.
 
 
 \question[3]\label{q:sidechannels}
-% examgen: sidechannels:E
+% tags: sidechannels:E
 Given an example of an active side-channel attack.
 
 \begin{solution}
@@ -82,7 +82,7 @@ Given an example of an active side-channel attack.
 
 
 \question[3]\label{q:sidechannels}
-% examgen: sidechannels:E
+% tags: sidechannels:E
 What is a covert channel?
 
 \begin{solution}
@@ -94,7 +94,7 @@ What is a covert channel?
 
 
 \question[4]\label{q:sidechannels}
-% examgen: sidechannels:E
+% tags: sidechannels:E
 Describe a scenario where a covert channel is used.
 
 \begin{solution}
@@ -111,8 +111,8 @@ Describe a scenario where a covert channel is used.
 \end{solution}
 
 
-\question[7]\label{q:sidechannels}
-% examgen: sidechannels:E:C
+\question\label{q:sidechannels}
+% tags: sidechannels:E:C
 \begin{parts}
   \part[4] Give an example of a covert channel and
   \begin{solution}
@@ -143,7 +143,7 @@ Describe a scenario where a covert channel is used.
 
 
 \question\label{q:sidechannels}
-% examgen: sidechannels:E:C
+% tags: sidechannels:E:C
 \begin{parts}
   \part[3] What is a covert channel?
   \begin{solution}
